--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,32 @@
-#outputTax,#taxPercent,#outputTotal{
+#outputTax,
+#taxPercent,
+#outputTotal {
   border-radius: 5in;
   border-style: solid;
   text-align: center;
 }
-.info{
+
+.info {
   display: grid;
   width: 100%;
-  grid-template-columns: auto auto auto
+  grid-template-columns: auto auto auto;
+  justify-items: end;
+  column-gap: 10px;
 }
 
-  #outputTax{
-    grid-area: 1 / 3 / span 1 / span 1;
-  }
-    #taxPercent {
-    grid-area: 1 / 2 / span 1 / span 1;
-  }
-  .info>div{
-    width: 33%;
-  }
-  #outputTotal{
+#outputTax {
+  grid-area: 1 / 3 / span 1 / span 1;
+}
+
+#taxPercent {
+  grid-area: 1 / 2 / span 1 / span 1;
+}
+
+.info>div {
+  width: 33%;
+}
+
+#outputTotal {
   grid-area: 1 / 2 / span 1 / span 2;
   width: 100%;
-  }
+}
