--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,8 @@
   display: grid;
   width: 100%;
   grid-template-columns: auto auto auto;
-  justify-items: end;
-  column-gap: 10px;
+/*   justify-items: end;
+  column-gap: 10px; */
 }
 
 #outputTax {
